--- a/.github/workflows/mkdocs-build.yml
+++ b/.github/workflows/mkdocs-build.yml
@@ -1,4 +1,4 @@
-name: build
+name: build-docs
 on:
   push:
     branches:
@@ -6,6 +6,7 @@ on:
     paths:
       - "docs/*"
       - "mkdocs.yml"
+      - ".github/workflows/mkdocs-build.yml"
 jobs:
   deploy:
     runs-on: ubuntu-latest
